--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 The SLM Project Contributors is composed of:
 
-* Jacopo Antonello <jacopo.antonello@cncb.ox.ac.uk>
+* Jacopo Antonello <jacopo@antonello.org>
 * Aurelien Barbotin <aurelien.barbotin@dtc.ox.ac.uk>
